# fast-api-timeseries-app

./: .gitignore  README.MD
.github/workflows/: ci-cd.yml
backend/: .env.prod  Dockerfile  README.MD  alembic.ini  config.py  entrypoint.sh  local.yml  main.py  production.yml  pyproject.toml  requirements.txt  sample.env
backend/alembic/: env.py
backend/alembic/versions/: ac9cccdda39c_.py  f9c69acaa1a2_.py
backend/controllers/: observations.py
backend/db/: db_setup.py  reset_db.py  seed_db.py
backend/db/models/: equipment.py  mixins.py  observation.py
backend/pydantic_schemas/: observation.py
backend/routes/: observations.py
backend/schemas/: observations.py
backend/tests/models/: test_equipment.py  test_observation.py
